--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
             <div class="portfolio-font p-2 p-md-4">
               <h4 class="mb-3">Ecommerce website</h4>
-              <a target="target_blank" href="https://bappygazi.github.io/CustomShop/home.html"><button class="btn btn-blue-deep text-white">View on Github</button></a>
+              <a target="target_blank" href="https://bappygazi.github.io/CustomShop/home.html"><button class="btn btn-blue-deep text-white">View on Live</button></a>
             </div>
           </div>
         </div>
@@ -103,7 +103,7 @@
             </div>
             <div class="portfolio-font p-2 p-md-4">
               <h4 class="mb-3">eSports Website Design</h4>
-              <a target="target_blank" href="https://bappygazi.github.io/robindon-elite-performance/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
+              <a target="target_blank" href="https://bappygazi.github.io/robindon-elite-performance/"><button class="btn btn-blue-deep text-white">View on Live</button></a>
             </div>
           </div>
         </div>
@@ -118,7 +118,7 @@
             </div>
             <div class="portfolio-font p-2 p-md-4">
               <h4 class="mb-3">Company Website build by scss</h4>
-              <a target="target_blank" href="https://bappygazi.github.io/company-site-scss-responsive/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
+              <a target="target_blank" href="https://bappygazi.github.io/company-site-scss-responsive/"><button class="btn btn-blue-deep text-white">View on Live</button></a>
             </div>
           </div>
         </div>
@@ -133,7 +133,7 @@
             </div>
             <div class="portfolio-font p-2 p-md-4">
               <h4 class="mb-3">Photography Landing Page</h4>
-              <a target="target_blank" href="https://bappygazi.github.io/photography/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
+              <a target="target_blank" href="https://bappygazi.github.io/photography/"><button class="btn btn-blue-deep text-white">View on Live</button></a>
             </div>
           </div>
         </div>
@@ -148,7 +148,7 @@
             </div>
             <div class="portfolio-font p-2 p-md-4">
               <h4 class="mb-3">CIC Website Design</h4>
-              <a target="target_blank" href="https://bappygazi.github.io/CIC/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
+              <a target="target_blank" href="https://bappygazi.github.io/CIC/"><button class="btn btn-blue-deep text-white">View on Live</button></a>
             </div>
           </div>
         </div>
@@ -163,7 +163,7 @@
             </div>
             <div class="portfolio-font p-2 p-md-4">
               <h4 class="mb-3">Yacht Website</h4>
-              <a target="target_blank" href="https://marefun.co/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
+              <a target="target_blank" href="https://marefun.co/"><button class="btn btn-blue-deep text-white">View on Live</button></a>
             </div>
           </div>
         </div>
@@ -178,7 +178,7 @@
             </div>
             <div class="portfolio-font p-2 p-md-4">
               <h4 class="mb-3">Coming Soon Page</h4>
-              <a target="target_blank" href="https://bappygazi.github.io/flings-coming-soon-Bootstrap.v5-Responsive-Design-for-All-devices/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
+              <a target="target_blank" href="https://bappygazi.github.io/flings-coming-soon-Bootstrap.v5-Responsive-Design-for-All-devices/"><button class="btn btn-blue-deep text-white">View on Live</button></a>
             </div>
           </div>
         </div>
@@ -193,7 +193,7 @@
             </div>
             <div class="portfolio-font p-2 p-md-4">
               <h4 class="mb-3">Gaming Page</h4>
-              <a target="target_blank" href="https://bappygazi.github.io/NeonLegion/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
+              <a target="target_blank" href="https://bappygazi.github.io/NeonLegion/"><button class="btn btn-blue-deep text-white">View on Live</button></a>
             </div>
           </div>
         </div>
@@ -223,7 +223,7 @@
             </div>
             <div class="portfolio-font p-2 p-md-4">
               <h4 class="mb-3">Crypto Cougars</h4>
-              <a target="target_blank" href="https://bappygazi.github.io/CryptoCougars/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
+              <a target="target_blank" href="https://bappygazi.github.io/CryptoCougars/"><button class="btn btn-blue-deep text-white">View on Live</button></a>
             </div>
           </div>
         </div>
@@ -238,7 +238,7 @@
             </div>
             <div class="portfolio-font p-2 p-md-4">
               <h4 class="mb-3">Aurora</h4>
-              <a target="target_blank" href="https://bappygazi.github.io/aurora.com/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
+              <a target="target_blank" href="https://bappygazi.github.io/aurora.com/"><button class="btn btn-blue-deep text-white">View on Live</button></a>
             </div>
           </div>
         </div>
@@ -253,7 +253,7 @@
             </div>
             <div class="portfolio-font p-2 p-md-4">
               <h4 class="mb-3">LevelUp Full Website</h4>
-              <a target="target_blank" href="https://bappygazi.github.io/levelup-using-scss-Bootstrap4/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
+              <a target="target_blank" href="https://bappygazi.github.io/levelup-using-scss-Bootstrap4/"><button class="btn btn-blue-deep text-white">View on Live</button></a>
             </div>
           </div>
         </div>
@@ -268,7 +268,7 @@
             </div>
             <div class="portfolio-font p-2 p-md-4">
               <h4 class="mb-3">Catchletter Full Website</h4>
-              <a target="target_blank" href="https://bappygazi.github.io/Catchletter/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
+              <a target="target_blank" href="https://bappygazi.github.io/Catchletter/"><button class="btn btn-blue-deep text-white">View on Live</button></a>
             </div>
           </div>
         </div>
@@ -283,7 +283,7 @@
             </div>
             <div class="portfolio-font p-2 p-md-4">
               <h4 class="mb-3">ANAX-Persoanl Portfolio Web Page</h4>
-              <a target="target_blank" href="https://bappygazi.github.io/Anax-using-css-animation-and-jQuery-animation/"><button class="btn btn-blue-deep text-white">View on Github</button></a>
+              <a target="target_blank" href="https://bappygazi.github.io/Anax-using-css-animation-and-jQuery-animation/"><button class="btn btn-blue-deep text-white">View on Live</button></a>
             </div>
           </div>
         </div>
