--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body data-spy="scroll" data-target=".navbar" data-offset="80">
   <!--   header part html start-->
   <nav class="navbar navbar-expand-lg navbar-light sticky-top">
-    <a class="icon" href="https://twitter.com/bappyghazi"><i class="fab fa-twitter"></i></a>
+    <a class="icon" href="https://www.instagram.com/webmaktor/"><i class="fab fa-instagram"></i></a>
     <a class="icon" href="https://www.linkedin.com/in/bappygazi/"><i class="fab fa-linkedin-in"></i></a>
 
     <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation">
