--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <nav class="navbar navbar-expand-lg navbar-light sticky-top">
     <a class="icon" href="https://www.instagram.com/webmaktor/"><i class="fab fa-instagram"></i></a>
     <a class="icon" href="https://www.linkedin.com/in/bappygazi/"><i class="fab fa-linkedin-in"></i></a>
+    <a class="icon" href="https://www.upwork.com/freelancers/~0167f01ff6aab43ab8"><img src="./images/upwork.png" alt="upwork.png" class="img-fluid" style="width: 26px;padding-top: 7px;"></a>
 
     <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation">
       <span><i class="fas fa-bars"></i></span>
@@ -503,7 +504,7 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="footer-text text-white text-center pt-2 pt-4 border-top">
-            <p>CopyRight © 2018-2021. All rights reserved by <span class="text-primary">Bappy gazi</span>.</p>
+            <p>CopyRight © 2018-2023. All rights reserved by <span class="text-primary">Bappy gazi</span>.</p>
           </div>
         </div>
       </div>
